# xo-digest

./: .agent.yml  .coveragerc  .cursor-tasks.json  .cursor.json  .cursorignore  .deploy-log.json  .dockerignore  .env.local  .env.production  .envrc  .envrc.fab2  .envrc.template  .fabignore  .flake8  .gitattributes  .gitignore  .gitignore.global  .gitleaks.toml  .gitmodules  .gpgignore  .pre-commit-config.yaml  .secrets.baseline  .xo-cli.yaml  .xo-onboard.sh  .xo.envrc.json  .zshrc  ADVANCED_SIGNING_FEATURES.md  AGENT_REFACTOR_SUMMARY.md  AUGUST_RECOVERY_STATUS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  COSMIC_ALIGNMENT_README.md  CURSOR_AGENT_DEPLOY_PROMPT.md  CURSOR_AGENT_PROMPT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.agent0  (+90 more)
.history/: .gitignore_20250729040013  fabfile_20250729033411.py  fabfile_20250729034639.py  fabfile_20250729034702.py  fabfile_20250729034721.py  fly_20250729051312.toml
.logbook/: 2025-07-11T22:21:57.818712.json
.memory/: seal_dream.json
.xo-setup/: env.sh
agent/: launch_persona.py
constellation/: index.yml  message_bottle.yml  message_bottle_visualization.json  seal_flame.yml  seal_flame_visualization.json
contracts/: NGOToken.sol  README-contracts.md  ScentDrop.sol  XOSeason1Drop.sol  hardhat.config.cjs  hardhat.config.ts  package.json  tsconfig.json
dev_doctor/: README.md  pre-commit-hook.py
docs/: SEALFLIP-coin.md  SSO_SETUP.md  TODO.chain_logic.md  TODO.env_check.md  audit_option_b.md  core_docs_bundle.mdx  dev-runbook_0.md  dev-runbook_01.md  dev-runbook_1.md  dev-runbook_2.md  dev-runbook_3.md  dev-runbook_chat-A.md  diagnose_cheatsheet.md  task_namespaces.md  trait-viewer-mvp.mdx
enhancements/: enabled_features.yml
ens-rescue/: .gitignore  package.json  rescue_atomic.js
fab_tasks/: __init__.py  agent.py  agent_tasks.py  api_keys.py  cheat-sheet.md  cloudflare.py  cloudflare_dns.py  dao.py  deploy.py  dns_check_21xo.py  drop_tasks.py  foundation.py  git.py  loader.py  nft_tasks_local.py  patch.py  pulse_tasks.py  socials.py  summary.py  tools_cursor.py  vault.py  vault_check.py  vault_inject_ipfs_task.py
hardhat/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json
inbox/: preview.py  send.py  server.py
(+822 files in other folders)
