[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xo-core"
version = "0.1.0"
description = "XO Core Package - A modular foundation for XO projects"
authors = [
    {name = "XO Team", email = "team@xo.example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "invoke>=2.2.0",
    "requests>=2.31.0",
    "pytest>=8.2.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "commitizen>=3.17.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.tox]
legacy_tox_ini = """
[testenv]
package = editable
deps = 
    pytest
    coverage
    invoke==2.2.0
    mypy==1.10.0
    pre-commit==3.7.0
    commitizen==3.17.0
    requests>=2.31.0
commands = 
    pytest {posargs}

[tool.poetry.dev-dependencies]
pytest-html = "^4.1.1"

[testenv:lint]
package = editable
deps = 
    flake8
    pre-commit==3.7.0
commands = 
    pre-commit run --all-files --show-diff-on-failure

[testenv:cz-lint]
package = editable
deps =
    coverage
    pytest-cov
    invoke==2.2.0
commands = 
    invoke cz-lint
"""